@@ -1,8 +1,13 @@
 
-$Id: changes.txt,v 1.24 2005/07/21 11:41:19 vvd0 Exp $
+$Id: changes.txt,v 1.25 2005/07/22 13:36:59 vvd0 Exp $
 
 ----
-MVDSV v0.180 Beta DEVELOP build 20?? (2005.07.??)
+MVDSV v0.18 build 2040 (2005.07.22)
+- project cleaned up
+[server]
+- only set the client to cs_spawned state AFTER we've verfied his spawncount
+(by Discinnect from ZQuake)
+- don't send to zombies (by Discinnect from ZQuake)
 [unix]
 - bugfix from 0.179b: crashes while printing red text in some places
 (Thanks to Oppy)
